--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -7,5 +7,28 @@
 </head>
 <body>
     <h1>Chocolate Chip Cookies</h1>
+    <img
+    src="BAKERY-STYLE-CHOCOLATE-CHIP-COOKIES-9-637x637-1.jpg"
+    alt="Chocolate Chip Cookies"
+    >
+    <h2>Description</h2>
+    <p>This is a classic recipe for delicious, warm chocolate chip cookies. I hope you enjoy!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 1/4 cups all-purpose flour</li>
+        <li>1 teaspoon baking soda</li>
+        <li>1 teaspoon salt</li>
+        <li>1 cup butter, softened</li>
+        <li>3/4 cup granulated sugar</li>
+        <li>3/4 cup packed brown sugar</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>2 large eggs</li>
+        <li>2 cups chocolate chips</li>
+    </ul>
+    <ol>
+        <li>Preheat oven to 375 degrees</li>
+        <li>Combine flor, baking soda and salt in small bowl. Beat butter, granulated sugar, brown sugar and vanilla extract in large mixer bowl until creamy. Add eggs, one at a time, beating well after each addition. Gradually beat in flour mixture. Stir in morsels. Drop by rounded tablespoon onto ungreased baking sheets.</li>
+        <li>Bake for 9 to 11 minutes or until golden brown. Cool on baking sheets for 2 minutes; remove to wire racks to cool completely.</li>
+    </ol>
 </body>
 </html>
