--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/cookies.html">Chocolate Chip Cookies Recipe</a>
+    <ul>
+        <li><a href="recipes/cookies.html">Chocolate Chip Cookies Recipe</a></li>
+        <li><a href="recipes/PBJ.html">PB&J</a></li>
+        <li><a href="recipes/steak.html">Steak</a></li>
+    </ul>
 </body>
 </html>
