--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -27,7 +27,7 @@
     </ul>
     <ol>
         <li>Preheat oven to 375 degrees</li>
-        <li>Combine flor, baking soda and salt in small bowl. Beat butter, granulated sugar, brown sugar and vanilla extract in large mixer bowl until creamy. Add eggs, one at a time, beating well after each addition. Gradually beat in flour mixture. Stir in morsels. Drop by rounded tablespoon onto ungreased baking sheets.</li>
+        <li>Combine flour, baking soda and salt in small bowl. Beat butter, granulated sugar, brown sugar and vanilla extract in large mixer bowl until creamy. Add eggs, one at a time, beating well after each addition. Gradually beat in flour mixture. Stir in morsels. Drop by rounded tablespoon onto ungreased baking sheets.</li>
         <li>Bake for 9 to 11 minutes or until golden brown. Cool on baking sheets for 2 minutes; remove to wire racks to cool completely.</li>
     </ol>
 </body>
